# quantum-contact-process

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conda-lock.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
legacy/: model_cleanup.py  robin_own_TeNPy.py  robin_quantum_contact_process.py
legacy/qutip/: qcp.py  qcp_model.py
src/: robin_1.py  robin_qcp.py
src/algorithms/: wfmc.py
src/analysis/: utils.py
src/hpc/: contact_process_L_10.py  contact_process_exc.py  contact_process_ground.py  contact_process_hpc.py  contact_process_stat.py  contact_process_stat_exc.py  job_script.sh  jobs_script.sh  jobs_script_exc.sh  jobs_script_ground.sh  plotting_results.py  post_processing.py  post_processing_1.py  qcp_hpc_scikit_tt.py  requirements.txt  setup_venv.py
src/models/: contact_process_model.py  diss_ising_model.py  ising_chain_model.py  ising_model.py  qcp_model.py  qcp_model_tenpy.py  qcp_scikit_tt.py  tfi_model.py
src/simulations/: contact_process.py  contact_process_dyn.py  contact_process_stat.py  diss_ising_chain.py  ising_chain.py  qcp.py  qcp_scikit_tt.py  qcp_tenpy.py
src/utilities/: utils.py
src/utils/: analysis.py  visualization.py
tests/: SVDBasedTEBD.py  qcp_mcsolve_tenpy.py  qcp_mcsolve_tenpy_test.py  simple_test.py  test_diss_ising.py  test_model.py  test_utilities.py
